<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/text_to_speech_test"
        android:orderInCategory="100"
        android:title="@string/text_to_speech_test"
        app:showAsAction="never" />
    <item
        android:id="@+id/generate_jump"
        android:orderInCategory="100"
        android:title="@string/generate_jump"
        app:showAsAction="never" />
    <item
        android:id="@+id/generate_guest_jump"
        android:orderInCategory="100"
        android:title="@string/generate_guest_jump"
        app:showAsAction="never" />
    <item
        android:id="@+id/clear_database"
        android:orderInCategory="100"
        android:title="@string/clear_database"
        app:showAsAction="never" />
</menu>
